--- a/LeapDrawing/klass.css
+++ b/LeapDrawing/klass.css
@@ -11,3 +11,17 @@ html, body {
 canvas { 
 	display:block; 
 }
+
+#layervideo{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 2;
+}
+
+#layertop{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index:100;
+}
