--- a/LeapDrawing/klass.css
+++ b/LeapDrawing/klass.css
@@ -6,11 +6,13 @@
 html, body { 
 	width:100%; 
 	height:100%; 
+	background-color: black;
 }
 
 canvas { 
 	display:block; 
 }
+
 
 #layervideo{
 	position: absolute;
@@ -25,3 +27,16 @@ canvas {
 	left: 0px;
 	z-index:100;
 }
+
+.eye1{
+	position: fixed;
+	top: 0%;
+	left: 5%;
+}
+
+.eye2{
+	position: fixed;
+	top: 0%;
+	left: 50%;
+}
+
